# jira

./: .codeclimate.yml  .coveragerc  .coveralls.yml  .editorconfig  .fossa.yml  .gitchangelog.rc  .gitignore  .gitreview  .pep8  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  .yamllint  AUTHORS.rst  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  RELEASE  RELEASE.md  azure-pipelines.yml  bindep.txt  circleci.yml  codecov.yml  constraints.txt  cspell.json  groups  make_local_jira_user.py  myfileReadme.txt  package-lock.json  package.json  pretest  project.config  pyproject.toml  pytest.ini  release.sh  (+11 more)
.config/: constraints.txt  dictionary.txt
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ack.yml  jira_ci.yml  jira_ci_python_test_runner.yml  jira_cloud_ci.yml  jira_server_ci.yml  publish.yml  push.yml  release-drafter.yml  release.yml  tox.yml
docs/: Makefile  advanced.rst  api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  jira.rst  jirashell.rst  modules.rst  requirements-rtd.txt
docs/_static/css/: custom_width.css
docs/extra/: jira.xml
examples/: agile.py  auth.py  basic_auth.py  basic_use.py  cookie_auth.py  createNewFixVersions.py  create_fixversions.py  example.py  greenhopper.py  maintenance.py
hooks/: pre-commit
jira/: __init__.py  client.py  config.py  cookieauth.py  exceptions.py  jirashell.py  package_meta.py  resilientsession.py  resources.py  service_desk.py  tests.py  utils.py  version.py
jira/examples/: example.py
jira/resources/: __init__.py  issue.py  project.py  resource.py  search.py
jira/utils/: __init__.py  lru_cache.py  version.py
tests/: __init__.py  conftest.py  id_rsa  id_rsa.pub  jira_test_manager.py  ruff.toml  start-jira.sh  stop-jira.sh  templates.json  test_application_properties.py  test_attachments.py  test_client.py  test_component.py  test_custom_field_options.py  test_dashboard.py  test_display_name_fields.py  test_exceptions.py  test_fields.py  test_filters.py  test_issue_links.py  test_issues.py  test_permissions.py  test_priorities.py  test_projects.py  test_qsh.py  test_resilientsession.py  test_resolutions.py  test_resources.py  test_search.py  test_server_info.py  test_service_desk.py  test_session.py  test_shell.py  test_status.py  test_unit.py  test_user_management.py  test_users.py  test_utils.py  test_version.py  test_websudo.py  (+1 more)
tests/resources/: __init__.py  test_attachment.py  test_board.py  test_comment.py  test_component.py  test_custom_field_option.py  test_dashboard.py  test_epic.py  test_field.py  test_filter.py  test_generic_resource.py  test_group.py  test_issue.py  test_issue_display_names.py  test_issue_link.py  test_issue_property.py  test_issue_type.py  test_issue_type_scheme_associations.py  test_organisation.py  test_pinned_comment.py  test_priority.py  test_project.py  test_project_statuses.py  test_remote_link.py  test_resolution.py  test_security_level.py  test_service_desk.py  test_sprint.py  test_status.py  test_status_category.py  test_teams.py  test_user.py  test_version.py  test_vote.py  test_watchers.py  test_worklog.py
tools/: jirashell  jirashell.py
