[metadata]
name = jira
author = Ben Speakmon
author_email = ben.speakmon@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
summary = Python library for interacting with JIRA via REST APIs.
long_description = file: README.rst
# Do not include ChangeLog in description-file due to multiple reasons:
# - Unicode chars, see https://github.com/pycontribs/jira/issues/512
# - Breaks ability to perform `python setup.py install`
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/pycontribs/jira
project_urls =
    Bug Tracker = https://github.com/pycontribs/jira/issues
    Release Management = https://github.com/pycontribs/jira/projects
    CI: GitHub Actions = https://github.com/pycontribs/jira/actions
    Source Code = https://github.com/pycontribs/jira.git
    Documentation = https://jira.readthedocs.io/en/master/
    Forum = https://community.atlassian.com/t5/tag/jira-python/tg-p?sort=recent
requires_python = >=3.6
platforms = any
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP
keywords = api, atlassian, jira, rest, web

[files]
packages =
    jira

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False
# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0
install_requires =
    defusedxml
    keyring
    requests-oauthlib>=1.1.0
    requests>=2.10.0
    requests_toolbelt
    setuptools>=20.10.1

[options.extras_require]
cli =
    ipython>=4.0.0
docs =
    Sphinx>=2.2.0
    sphinx_rtd_theme>=0.4.3
opt =
    filemagic>=1.6
    PyJWT
    requests_jwt
    requests_kerberos
async =
    requests-futures>=0.9.7
test =
    docutils>=0.12
    flaky
    MarkupSafe>=0.23
    oauthlib
    py >= 1.4
    pytest-cache
    pytest-cov
    pytest-instafail
    pytest-sugar
    pytest-timeout>=1.3.1
    pytest-xdist>=2.2
    pytest>=6.0.0,<7.0  # MIT
    PyYAML>=5.1  # MIT
    requests_mock  # Apache-2
    requires.io  # UNKNOWN!!!
    tenacity  # Apache-2
    wheel>=0.24.0  # MIT
    xmlrunner>=1.7.7  # LGPL
    yanc>=0.3.3  # GPL

[options.entry_points]
console_scripts =
    jirashell = jira.jirashell:main

[options.package_data]
jira = jira/py.typed

[egg_info]
egg_base = .

[aliases]
test=pytest

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[flake8]
format = pylint
exclude =
    build
    .eggs
    .tox
    node_modules
statistics=yes
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203
# 88 is official black default:
max-line-length = 88

[isort]
# start - black compatible settings
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
# end - black compatible settings
known_first_party =
    jira
    tests

[tool:pytest]
norecursedirs = . jira _build tmp* lib/third lib *.egg bin distutils build docs demo
python_files = *.py
addopts = -p no:xdist --durations=10 --tb=long -rxX -v --color=yes --junitxml=build/results.xml --cov-report=xml --cov jira

testpaths = tests

# these are important for distributed testing, to speedup their execution we minimize what we sync
rsyncdirs = . jira demo docs
rsyncignore = .git

# pytest-timeout, delete_project on jira cloud takes >70s
timeout = 80

# avoid useless warnings related to coverage skips
filterwarnings =
    ignore::pytest.PytestWarning

[mypy]
python_version = 3.6
