[metadata]
name = jira
author = Ben Speakmon
author_email = ben.speakmon@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
summary = Python library for interacting with JIRA via REST APIs.
long_description = file: README.rst
# Do not include ChangeLog in description-file due to multiple reasons:
# - Unicode chars, see https://github.com/pycontribs/jira/issues/512
# - Breaks ability to perform `python setup.py install`
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/pycontribs/jira
project_urls =
    Bug Tracker = https://github.com/pycontribs/jira/issues
    Release Management = https://github.com/pycontribs/jira/projects
    CI: GitHub Actions = https://github.com/pycontribs/jira/actions
    Source Code = https://github.com/pycontribs/jira.git
    Documentation = https://jira.readthedocs.io
    Forum = https://community.atlassian.com/t5/tag/jira-python/tg-p?sort=recent
requires_python = >=3.8
platforms = any
license = BSD-2-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP
keywords = api, atlassian, jira, rest, web

[files]
packages =
    jira

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    defusedxml
    packaging
    requests-oauthlib>=1.1.0
    requests>=2.10.0
    requests_toolbelt
    typing_extensions>=3.7.4.2

[options.extras_require]
cli =
    ipython>=4.0.0
    keyring
docs =
    sphinx>=5.0.0
    sphinx-copybutton
    # HTML Theme
    furo
opt =
    filemagic>=1.6
    PyJWT
    requests_jwt
    requests_kerberos
async =
    requests-futures>=0.9.7
test =
    docutils>=0.12
    flaky
    MarkupSafe>=0.23
    oauthlib
    py >= 1.4
    pytest-cache
    pytest-cov
    pytest-instafail
    pytest-sugar
    pytest-timeout>=1.3.1
    pytest-xdist>=2.2
    pytest>=6.0.0  # MIT
    PyYAML>=5.1  # MIT
    requests_mock  # Apache-2
    requires.io  # UNKNOWN!!!
    tenacity  # Apache-2
    wheel>=0.24.0  # MIT
    xmlrunner>=1.7.7  # LGPL
    yanc>=0.3.3  # GPL
    parameterized>=0.8.1  # BSD-3-Clause

[options.entry_points]
console_scripts =
    jirashell = jira.jirashell:main

[options.package_data]
jira = jira/py.typed

# No pyproject support: https://github.com/PyCQA/flake8/issues/234
[flake8]
format = pylint
exclude =
    build
    .eggs
    .tox
    node_modules
statistics=yes
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203
# 88 is official black default:
max-line-length = 88
